--- a/html/user/set.html
+++ b/html/user/set.html
@@ -13,10 +13,9 @@
 
 <div class="fly-header layui-bg-black">
     <div class="layui-container">
-        <a class="fly-logo" href="/">
+        <a class="fly-logo" href="../index.html">
             <img width="180" src="../../res/images/fao.png" alt="达达问答">
         </a>
-
 
         <ul class="layui-nav fly-nav-user">
             <!-- 登入后的状态 -->
@@ -29,8 +28,7 @@
                     <dd><a href="../user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
                     <dd><a href="../user/message.html"><i class="iconfont icon-tongzhi"
                                                           style="top: 4px;"></i>我的消息</a></dd>
-                    <dd><a href="../user/home.html"><i class="layui-icon"
-                                                       style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
+                    <dd><a href="../user/home.html"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
                     </dd>
                     <hr style="margin: 5px 0;">
                     <dd><a href="" style="text-align: center;">退出</a></dd>
@@ -48,7 +46,7 @@
                 我的主页
             </a>
         </li>
-        <li class="layui-nav-item">
+        <li class="layui-nav-item ">
             <a href="index.html">
                 <i class="layui-icon">&#xe612;</i>
                 用户中心
@@ -62,8 +60,14 @@
         </li>
         <li class="layui-nav-item">
             <a href="message.html">
+                <i class="layui-icon">&#xe667;</i>
+                我的通知
+            </a>
+        </li>
+        <li class="layui-nav-item">
+            <a href="care.html">
                 <i class="layui-icon">&#xe611;</i>
-                我的消息
+                我的关注
             </a>
         </li>
     </ul>
