--- a/html/user/index.html
+++ b/html/user/index.html
@@ -13,7 +13,7 @@
 
 <div class="fly-header layui-bg-black">
     <div class="layui-container">
-        <a class="fly-logo" href="/">
+        <a class="fly-logo" href="../index.html">
             <img width="180" src="../../res/images/fao.png" alt="达达问答">
         </a>
 
@@ -21,15 +21,14 @@
             <!-- 登入后的状态 -->
             <li class="layui-nav-item">
                 <a class="fly-nav-avatar" href="javascript:;">
-                    <cite class="layui-hide-xs">陈苗</cite>
+                    <cite class="layui-hide-xs"></cite>
                     <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
                 </a>
                 <dl class="layui-nav-child">
                     <dd><a href="../user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
                     <dd><a href="../user/message.html"><i class="iconfont icon-tongzhi"
                                                           style="top: 4px;"></i>我的消息</a></dd>
-                    <dd><a href="../user/home.html"><i class="layui-icon"
-                                                       style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
+                    <dd><a href="../user/home.html"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
                     </dd>
                     <hr style="margin: 5px 0;">
                     <dd><a href="" style="text-align: center;">退出</a></dd>
@@ -61,8 +60,14 @@
         </li>
         <li class="layui-nav-item">
             <a href="message.html">
+                <i class="layui-icon">&#xe667;</i>
+                我的通知
+            </a>
+        </li>
+        <li class="layui-nav-item">
+            <a href="care.html">
                 <i class="layui-icon">&#xe611;</i>
-                我的消息
+                我的关注
             </a>
         </li>
     </ul>
@@ -152,7 +157,11 @@
         , base: '../../res/mods/'
     }).extend({
         fly: 'index'
-    }).use('fly');
+    }).use('fly', function () {
+        let $ = layui.jquery;
+        $('#header').load("../common/header.html")
+
+    });
 </script>
 
 </body>
