--- a/html/user/reg.html
+++ b/html/user/reg.html
@@ -13,28 +13,20 @@
 
 <div class="fly-header layui-bg-black">
     <div class="layui-container">
-        <a class="fly-logo" href="/">
+        <a class="fly-logo" href="../index.html">
             <img width="180" src="../../res/images/fao.png" alt="达达问答">
         </a>
 
         <ul class="layui-nav fly-nav-user">
             <!-- 未登入的状态 -->
             <li class="layui-nav-item">
-                <a class="iconfont icon-touxiang layui-hide-xs" href="user/login.html"></a>
+                <a class="iconfont icon-touxiang layui-hide-xs" href="login.html"></a>
             </li>
             <li class="layui-nav-item">
                 <a href="login.html">登入</a>
             </li>
             <li class="layui-nav-item">
                 <a href="reg.html">注册</a>
-            </li>
-            <li class="layui-nav-item layui-hide-xs">
-                <a href="/app/qq/" onclick="layer.msg('正在通过QQ登入', {icon:16, shade: 0.1, time:0})"
-                   title="QQ登入" class="iconfont icon-qq"></a>
-            </li>
-            <li class="layui-nav-item layui-hide-xs">
-                <a href="/app/weibo/" onclick="layer.msg('正在通过微博登入', {icon:16, shade: 0.1, time:0})"
-                   title="微博登入" class="iconfont icon-weibo"></a>
             </li>
         </ul>
     </div>
