--- a/html/user/care.html
+++ b/html/user/care.html
@@ -68,10 +68,11 @@
                     <dd><a href="../user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
                     <dd><a href="../user/message.html"><i class="iconfont icon-tongzhi"
                                                           style="top: 4px;"></i>我的消息</a></dd>
-                    <dd><a href="../user/home.html"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
+                    <dd><a href="../user/home.html"><i class="layui-icon"
+                                                       style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
                     </dd>
                     <hr style="margin: 5px 0;">
-                    <dd><a href="" style="text-align: center;">退出</a></dd>
+                    <dd><a href="login.html" style="text-align: center;">退出</a></dd>
                 </dl>
             </li>
         </ul>
@@ -142,73 +143,22 @@
                     <ul class="mine-view">
 
 
-                        <li class="item_cont">
-                            <a
-                                    href="//me.csdn.net/qq_43918783"
-                                    target="_blank"
-                            ><img
-                                    src="https://avatar.csdn.net/9/5/6/3_qq_43918783.jpg" alt=""
-                                    class="header"></a>
-                            <a
-                                    href="//me.csdn.net/qq_43918783"
-                                    title="qq_43918783"
-                                    target="_blank" class="nick">笑，为谁含羞</a>
-                            <a class="layui-btn layui-btn-normal">取消关注</a>
-                        </li>
+                        <!--<li class="item_cont">-->
+                            <!--<a-->
+                                    <!--href="//me.csdn.net/qq_43918783"-->
+                                    <!--target="_blank"-->
+                            <!--&gt;<img-->
+                                    <!--src="https://avatar.csdn.net/9/5/6/3_qq_43918783.jpg" alt=""-->
+                                    <!--class="header"></a>-->
+                            <!--<a-->
+                                    <!--href="//me.csdn.net/qq_43918783"-->
+                                    <!--title="qq_43918783"-->
+                                    <!--target="_blank" class="nick">奥术&lt;!&ndash;笑，为谁含羞&ndash;&gt;</a>-->
+                            <!--<a class="layui-btn layui-btn-normal">取消关注</a>-->
+                        <!--</li>-->
 
-                        <li class="item_cont">
-
-
-                            <a href="#" target="_blank">
-                                <img class="header"
-                                     src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
-                            </a>
-                            <a
-                                    href="//me.csdn.net/qq_43918783"
-                                    title="qq_43918783"
-                                    target="_blank" class="nick">
-                                陈苗
-                            </a>
-
-
-                            <a class="layui-btn layui-btn-normal">取消关注</a>
-                        </li>
-                        <li class="item_cont">
-
-
-                            <a href="#" target="_blank">
-                                <img class="header"
-                                     src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
-                            </a>
-                            <a
-                                    href="//me.csdn.net/qq_43918783"
-                                    title="qq_43918783"
-                                    target="_blank" class="nick">
-                                陈苗
-                            </a>
-
-
-                            <a class="layui-btn layui-btn-normal">取消关注</a>
-                        </li>
-                        <li class="item_cont">
-
-
-                            <a href="#" target="_blank">
-                                <img class="header"
-                                     src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
-                            </a>
-                            <a
-                                    href="//me.csdn.net/qq_43918783"
-                                    title="qq_43918783"
-                                    target="_blank" class="nick">
-                                陈苗
-                            </a>
-
-
-                            <a class="layui-btn layui-btn-normal">取消关注</a>
-                        </li>
                     </ul>
-                    <div id="LAY_page"></div>
+                    <div id="care_page"></div>
                 </div>
                 <div class="layui-tab-item">
                     <div class=" layui-layer-page layui-box layui-layim-chat1"
@@ -258,9 +208,9 @@
                                             <textarea id="face" style="display: none;"></textarea>
                                         </div>
                                         <!--<div class="layui-unselect layim-chat-tool"-->
-                                             <!--data-json="%7B%22name%22%3A%22%E5%9C%A8%E7%BA%BF%E5%AE%A2%E6%9C%8D%E4%B8%80%22%2C%22type%22%3A%22kefu%22%2C%22avatar%22%3A%22%2F%2Ftp1.sinaimg.cn%2F5619439268%2F180%2F40030060651%2F1%22%2C%22id%22%3A1111111%7D">-->
-                                            <!--&lt;!&ndash;<span class="layui-icon layim-tool-face" title="选择表情"&ndash;&gt;-->
-                                            <!--&lt;!&ndash;&gt;</span>&ndash;&gt;-->
+                                        <!--data-json="%7B%22name%22%3A%22%E5%9C%A8%E7%BA%BF%E5%AE%A2%E6%9C%8D%E4%B8%80%22%2C%22type%22%3A%22kefu%22%2C%22avatar%22%3A%22%2F%2Ftp1.sinaimg.cn%2F5619439268%2F180%2F40030060651%2F1%22%2C%22id%22%3A1111111%7D">-->
+                                        <!--&lt;!&ndash;<span class="layui-icon layim-tool-face" title="选择表情"&ndash;&gt;-->
+                                        <!--&lt;!&ndash;&gt;</span>&ndash;&gt;-->
                                         <!--</div>-->
                                         <!-- class="layim-chat-textarea"-->
 
@@ -335,8 +285,11 @@
         , base: '../../res/mods/'
     }).extend({
         fly: 'index'
-    }).use('fly', function () {
+    }).use(['fly', 'laypage'], function () {
+        let fly = layui.fly;
         let layedit = layui.layedit;
+        let laypage = layui.laypage;
+        let layer = layui.layer;
         layedit.build('face', {
             tool: ['face'],
             height: 80 //设置编辑器高度
@@ -344,10 +297,98 @@
 
         let $ = layui.jquery;
         $('.layui-layedit').removeClass('layui-layedit');
-        $('.layui-layer-page').css('z-index',null);
-        $('.layui-layer-page').css('top',null);
-        $('.layui-layer-page').css('width','100%');
+        $('.layui-layer-page').css('z-index', null);
+        $('.layui-layer-page').css('top', null);
+        $('.layui-layer-page').css('width', '100%');
+
+
+        // 填充关注列表数据
+        function careFullTable(res) {
+            $('.mine-view').empty();
+            $.each(res.body.data.records, function (index, val) {
+                let liItem = $('<li class="item_cont"> </li>');
+                let a1Item = $("<a></a>").attr('href', 'home.html?id' + val.userId);
+                let imgItem = $("<img class='header'>").attr('src', layui.imgUrl() + val.avatar);
+                a1Item.append(imgItem);
+                let a2Item = $('<a class="nick"></a>').attr('href', 'home.html?id' + val.userId).text(val.username);
+                let a3Item = $('<a class="layui-btn layui-btn-primary"></a>')
+                    .text(val.eachCare > 0 ? '相互关注' : '已关注').attr('value', val.userId);
+
+                liItem.append(a1Item);
+                liItem.append(a2Item);
+                liItem.append(a3Item);
+
+                $('.mine-view').append(liItem);
+            });
+
+        }
+
+        // 点击关注列表按钮
+        $('.mine-view').on('click', '.item_cont a.layui-btn-primary', function () {
+            let careId = $(this).attr('value');
+            $(this).text('关注').removeClass('layui-btn-primary')
+                .addClass('layui-btn-normal');
+            handleCare(careId)
+        });
+        // 点击关注
+        $('.mine-view').on('click', '.item_cont a.layui-btn-normal', function () {
+            let careId = $(this).attr('value');
+            $(this).text('已关注').removeClass('layui-btn-normal')
+                .addClass('layui-btn-primary');
+            handleCare(careId)
+        });
+
+        // 处理点击关注
+        function handleCare(userId) {
+            fly.json('/problemInfo/change/careinfo', {userId: userId}, function (res) {
+            })
+        }
+
+
+        // 关注分页处理
+        function carePage(url, curr, size) {
+            let current = curr || 1;
+            $.ajax({
+                url: layui.baseUrl() + url,
+                type: 'get',
+                data: {
+                    current: current,
+                    size: size
+                },
+                dataType: 'json',
+                headers: {
+                    Authorization: localStorage.getItem('token')
+                },
+                success(res) {
+                    // 拼接数据
+                    careFullTable(res);
+
+                    // 设置分页
+                    laypage.render({
+                        elem: 'care_page'
+                        , count: res.body.data.total //数据总数
+                        , limit: res.body.data.size //每页显示的条数
+                        , curr: res.body.data.current // 当前页
+                        , jump: function (obj, first) {
+                            console.log(obj)
+                            if (!first) {
+                                carePage(url, obj.curr, obj.limit)
+                            }
+                        }
+                    });
+                }
+
+            });
+        }
+
+
+        carePage('/Interaction/careInfoPage', 1, 10);
+
     });
+
+
+    // 获取关注信息
+    // fly.json('/Interaction/careInfoPage')
 </script>
 
 </body>
