--- a/html/user/index.html
+++ b/html/user/index.html
@@ -28,7 +28,8 @@
                     <dd><a href="../user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
                     <dd><a href="../user/message.html"><i class="iconfont icon-tongzhi"
                                                           style="top: 4px;"></i>我的消息</a></dd>
-                    <dd><a href="../user/home.html"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
+                    <dd><a href="../user/home.html"><i class="layui-icon"
+                                                       style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
                     </dd>
                     <hr style="margin: 5px 0;">
                     <dd><a href="" style="text-align: center;">退出</a></dd>
@@ -91,47 +92,33 @@
         -->
         <div class="layui-tab layui-tab-brief" lay-filter="user">
             <ul class="layui-tab-title" id="LAY_mine">
-                <li data-type="mine-jie" lay-id="index" class="layui-this">我发的帖（<span>89</span>）
+                <li data-type="mine-jie" lay-id="index" class="layui-this">我发布的问题（<span id="tip_put_problem">0</span>）
                 </li>
                 <li data-type="collection" data-url="/collection/find/" lay-id="collection">
-                    我收藏的帖（<span>16</span>）
+                    我收藏的问题（<span id="tip_collect_problem">0</span>）
                 </li>
             </ul>
             <div class="layui-tab-content" style="padding: 20px 0;">
                 <div class="layui-tab-item layui-show">
-                    <ul class="mine-view jie-row">
-                        <li>
-                            <a class="jie-title" href="../jie/detail.html" target="_blank">基于 layui
-                                的极简社区页面模版</a>
-                            <i>2017/3/14 上午8:30:00</i>
-                            <a class="mine-edit" href="/jie/edit/8116">编辑</a>
-                            <em>661阅/10答</em>
-                        </li>
-                        <li>
-                            <a class="jie-title" href="../jie/detail.html" target="_blank">基于 layui
-                                的极简社区页面模版</a>
-                            <i>2017/3/14 上午8:30:00</i>
-                            <a class="mine-edit" href="/jie/edit/8116">编辑</a>
-                            <em>661阅/10答</em>
-                        </li>
-                        <li>
-                            <a class="jie-title" href="../jie/detail.html" target="_blank">基于 layui
-                                的极简社区页面模版</a>
-                            <i>2017/3/14 上午8:30:00</i>
-                            <a class="mine-edit" href="/jie/edit/8116">编辑</a>
-                            <em>661阅/10答</em>
-                        </li>
+                    <ul class="mine-view jie-row" id="put_problem_ul">
+                        <!--<li>-->
+                            <!--<a class="jie-title" href="../jie/detail.html" target="_blank">基于 layui-->
+                                <!--的极简社区页面模版</a>-->
+                            <!--<i>2017/3/14 上午8:30:00</i>-->
+                            <!--<a class="mine-edit" href="/jie/edit/8116">编辑</a>-->
+                            <!--<em>661阅/10答</em>-->
+                        <!--</li>-->
                     </ul>
-                    <div id="LAY_page"></div>
+                    <div id="putProblemPage"></div>
                 </div>
                 <div class="layui-tab-item">
-                    <ul class="mine-view jie-row">
-                        <li>
-                            <a class="jie-title" href="../jie/detail.html" target="_blank">基于 layui
-                                的极简社区页面模版</a>
-                            <i>收藏于23小时前</i></li>
+                    <ul class="mine-view jie-row" id="collect_problem_ul">
+                        <!--<li>-->
+                            <!--<a class="jie-title" href="../jie/detail.html" target="_blank">基于 layui-->
+                                <!--的极简社区页面模版</a>-->
+                            <!--<i>收藏于23小时前</i></li>-->
                     </ul>
-                    <div id="LAY_page1"></div>
+                    <div id="collect_problem_page"></div>
                 </div>
             </div>
         </div>
@@ -152,14 +139,202 @@
         , experience: 83
         , sex: '男'
     };
+    // 时间处理函数
+    Date.prototype.Format = function (fmt) {
+        var o = {
+            "y+": this.getFullYear(),
+            "M+": this.getMonth() + 1,                 //月份
+            "d+": this.getDate(),                    //日
+            "h+": this.getHours(),                   //小时
+            "m+": this.getMinutes(),                 //分
+            "s+": this.getSeconds(),                 //秒
+            "q+": Math.floor((this.getMonth() + 3) / 3), //季度
+            "S+": this.getMilliseconds()             //毫秒
+        };
+        for (var k in o) {
+            if (new RegExp("(" + k + ")").test(fmt)) {
+                if (k == "y+") {
+                    fmt = fmt.replace(RegExp.$1, ("" + o[k]).substr(4 - RegExp.$1.length));
+                } else if (k == "S+") {
+                    var lens = RegExp.$1.length;
+                    lens = lens == 1 ? 3 : lens;
+                    fmt = fmt.replace(RegExp.$1, ("00" + o[k]).substr(("" + o[k]).length - 1, lens));
+                } else {
+                    fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+                }
+            }
+        }
+        return fmt;
+    };
+    // 处理时间
+    function timeago(dateTimeStamp){   //dateTimeStamp是一个时间毫秒，注意时间戳是秒的形式，在这个毫秒的基础上除以1000，就是十位数的时间戳。13位数的都是时间毫秒。
+        var minute = 1000 * 60;      //把分，时，天，周，半个月，一个月用毫秒表示
+        var hour = minute * 60;
+        var day = hour * 24;
+        var week = day * 7;
+        var halfamonth = day * 15;
+        var month = day * 30;
+        var now = new Date().getTime();   //获取当前时间毫秒
+        console.log(now)
+        var diffValue = now - dateTimeStamp;//时间差
+
+        if(diffValue < 0){
+            return;
+        }
+        var minC = diffValue/minute;  //计算时间差的分，时，天，周，月
+        var hourC = diffValue/hour;
+        var dayC = diffValue/day;
+        var weekC = diffValue/week;
+        var monthC = diffValue/month;
+        if(monthC >= 1 && monthC <= 3){
+            result = " " + parseInt(monthC) + "月前"
+        }else if(weekC >= 1 && weekC <= 3){
+            result = " " + parseInt(weekC) + "周前"
+        }else if(dayC >= 1 && dayC <= 6){
+            result = " " + parseInt(dayC) + "天前"
+        }else if(hourC >= 1 && hourC <= 23){
+            result = " " + parseInt(hourC) + "小时前"
+        }else if(minC >= 1 && minC <= 59){
+            result =" " + parseInt(minC) + "分钟前"
+        }else if(diffValue >= 0 && diffValue <= minute){
+            result = "刚刚"
+        }else {
+            var datetime = new Date();
+            datetime.setTime(dateTimeStamp);
+            var Nyear = datetime.getFullYear();
+            var Nmonth = datetime.getMonth() + 1 < 10 ? "0" + (datetime.getMonth() + 1) : datetime.getMonth() + 1;
+            var Ndate = datetime.getDate() < 10 ? "0" + datetime.getDate() : datetime.getDate();
+            var Nhour = datetime.getHours() < 10 ? "0" + datetime.getHours() : datetime.getHours();
+            var Nminute = datetime.getMinutes() < 10 ? "0" + datetime.getMinutes() : datetime.getMinutes();
+            var Nsecond = datetime.getSeconds() < 10 ? "0" + datetime.getSeconds() : datetime.getSeconds();
+            result = Nyear + "-" + Nmonth + "-" + Ndate
+        }
+        return result;
+    }
+
+    layui.cache.token = JSON.parse(localStorage.getItem('token'));
     layui.config({
         version: "3.0.0"
         , base: '../../res/mods/'
     }).extend({
         fly: 'index'
-    }).use('fly', function () {
+    }).use(['fly', 'laypage'], function () {
         let $ = layui.jquery;
-        $('#header').load("../common/header.html")
+
+        let laypage = layui.laypage;
+        // 1 获取账号信息显示
+        // 设置头像
+        $('cite.layui-hide-xs').text(layui.cache.token.username);
+        // 设置nickname
+        $('.fly-nav-avatar img').attr('src', layui.imgUrl() + layui.cache.token.avatar);
+        // 设置上传头像
+        $('.avatar-add img').attr('src', layui.imgUrl() + layui.cache.token.avatar);
+        //2 分页获取发布问题信息
+        carePage('/problemInfo/PageProblemInfo', 1, 10);
+        function carePage(url, curr, size) {
+            let current = curr || 1;
+            $.ajax({
+                url: layui.baseUrl() + url,
+                type: 'get',
+                data: {
+                    current: current,
+                    size: size
+                },
+                dataType: 'json',
+                headers: {
+                    Authorization: localStorage.getItem('token')
+                },
+                success(res) {
+                    // 拼接数据
+                    putProblemPageTable(res);
+                    // 设置分页
+                    laypage.render({
+                        elem: 'putProblemPage'
+                        , count: res.body.data.total //数据总数
+                        , limit: res.body.data.size //每页显示的条数
+                        , curr: res.body.data.current // 当前页
+                        , jump: function (obj, first) {
+                            if (!first) {
+                                carePage(url, obj.curr, obj.limit)
+                            }
+                        }
+                    });
+                }
+
+            });
+        }
+        // 设置发布问题的列表信息
+        function putProblemPageTable(res) {
+            $('#tip_put_problem').text(res.body.data.total);
+            let ulDom = $('#put_problem_ul');
+            ulDom.empty();
+            $.each(res.body.data.records, function (index, val) {
+                let liDom = $('<li></li>');
+                let a1Dom = $('<a class="jie-title" target="_blank"></a>')
+                    .attr('href', '../jie/detail.html?problemId=' + val.problemId)
+                    .text(val.problemTitle);
+                let iDom = $('<i></i>').text(new Date(val.time).Format("yyyy年MM月dd日 hh:mm:ss"));
+                let emDom = $("<em></em>").text(val.collection + ' 收藏 / ' + val.answersCount + ' 回答');
+                liDom.append(a1Dom);
+                liDom.append(iDom);
+                liDom.append(emDom);
+                ulDom.append(liDom);
+            });
+        }
+
+        //3 分页获取收藏信息
+
+        collectPage('/problemInfo/PageProblemCollect', 1, 10);
+        function collectPage(url, curr, size) {
+            let current = curr || 1;
+            $.ajax({
+                url: layui.baseUrl() + url,
+                type: 'get',
+                data: {
+                    current: current,
+                    size: size
+                },
+                dataType: 'json',
+                headers: {
+                    Authorization: localStorage.getItem('token')
+                },
+                success(res) {
+                    // 拼接数据
+                    collectPageTable(res);
+                    // 设置分页
+                    laypage.render({
+                        elem: 'collect_problem_page'
+                        , count: res.body.data.total //数据总数
+                        , limit: res.body.data.size //每页显示的条数
+                        , curr: res.body.data.current // 当前页
+                        , jump: function (obj, first) {
+                            if (!first) {
+                                carePage(url, obj.curr, obj.limit)
+                            }
+                        }
+                    });
+                }
+
+            });
+        }
+        // 设置发布问题的列表信息
+        function collectPageTable(res) {
+
+            $('#tip_collect_problem').text(res.body.data.total);
+            let ulDom = $('#collect_problem_ul');
+            ulDom.empty();
+            $.each(res.body.data.records, function (index, val) {
+                let liDom = $('<li></li>');
+                let a1Dom = $('<a class="jie-title" target="_blank"></a>')
+                    .attr('href', '../jie/detail.html?problemId=' + val.problemId)
+                    .text(val.problemTitle);
+                let iDom = $('<i></i>').text('收藏与'+timeago(val.time));
+                liDom.append(a1Dom);
+                liDom.append(iDom);
+                ulDom.append(liDom);
+            });
+        }
+
 
     });
 </script>
