--- a/html/user/set.html
+++ b/html/user/set.html
@@ -8,6 +8,15 @@
     <meta name="description" content="达达达数据结构专业问答">
     <link rel="stylesheet" href="../../res/layui/css/layui.css">
     <link rel="stylesheet" href="../../res/css/global.css">
+    <style>
+        #uploadImg {
+            position: absolute;
+            left: 50%;
+            top: 35px;
+            margin: 0 0 0 -56px;
+        }
+
+    </style>
 </head>
 <body>
 
@@ -28,10 +37,11 @@
                     <dd><a href="../user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
                     <dd><a href="../user/message.html"><i class="iconfont icon-tongzhi"
                                                           style="top: 4px;"></i>我的消息</a></dd>
-                    <dd><a href="../user/home.html"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
+                    <dd><a href="../user/home.html"><i class="layui-icon"
+                                                       style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
                     </dd>
                     <hr style="margin: 5px 0;">
-                    <dd><a href="" style="text-align: center;">退出</a></dd>
+                    <dd><a href="login.html" style="text-align: center;">退出</a></dd>
                 </dl>
             </li>
         </ul>
@@ -93,7 +103,8 @@
             </ul>
             <div class="layui-tab-content" style="padding: 20px 0;">
                 <div class="layui-form layui-form-pane layui-tab-item layui-show">
-                    <form method="post">
+                    <form method="post" action="/myPage/user/userInformation">
+                        <input type="text" id="L_userInfoId" hidden name="userInfoId" value="">
                         <div class="layui-form-item">
                             <label for="L_phone" class="layui-form-label">手机</label>
                             <div class="layui-input-inline">
@@ -111,18 +122,21 @@
                         <div class="layui-form-item"><label for="L_username"
                                                             class="layui-form-label">昵称</label>
                             <div class="layui-input-inline"><input type="text" id="L_username"
-                                                                   name="username" required=""
+                                                                   required=""
                                                                    lay-verify="required"
                                                                    autocomplete="off" value=""
-                                                                   class="layui-input"></div>
+                                                                   class="layui-input"
+                                                                   disabled=""
+                                                                   style="cursor: not-allowed !important;"
+                            ></div>
                             <div class="layui-inline">
-                                <div class="layui-input-inline"><input type="radio" name="sex"
-                                                                       value="0" title="男">
+                                <div class="layui-input-inline">
+                                    <input type="radio" name="sex" value="男" title="男">
                                     <div class="layui-unselect layui-form-radio"><i
                                             class="layui-anim layui-icon"></i>
                                         <div>男</div>
                                     </div>
-                                    <input type="radio" name="sex" value="1" title="女">
+                                    <input type="radio" name="sex" value="女" title="女">
                                     <div class="layui-unselect layui-form-radio"><i
                                             class="layui-anim layui-icon"></i>
                                         <div>女</div>
@@ -133,7 +147,7 @@
                         <div class="layui-form-item">
                             <label for="L_name" class="layui-form-label">姓名</label>
                             <div class="layui-input-inline">
-                                <input type="text" id="L_name" name="username" autocomplete="off"
+                                <input type="text" id="L_name" name="name" autocomplete="off"
                                        value="" class="layui-input">
                             </div>
                         </div>
@@ -143,10 +157,6 @@
                                 <input type="text" class="layui-input" id="L_birthday"
                                        name="birthday" placeholder="yyyy-MM-dd">
                             </div>
-                            <!--<div class="layui-input-inline">-->
-                            <!--<input type="text" id="L_birthday" name="birthday" autocomplete="off"-->
-                            <!--value="" class="layui-input">-->
-                            <!--</div>-->
                         </div>
                         <div class="layui-form-item">
                             <label for="L_school" class="layui-form-label">学校</label>
@@ -172,39 +182,44 @@
                         <!--</div>-->
                         <!--</div>-->
                         <div class="layui-form-item">
-                            <button class="layui-btn" key="set-mine" lay-filter="*" lay-submit>
+                            <button class="layui-btn" key="set-mine" lay-filter="updateUserInfo"
+                                    lay-submit>
                                 确认修改
                             </button>
                         </div>
                     </form>
                 </div>
                 <div class="layui-form layui-form-pane layui-tab-item">
+
                     <div class="layui-form-item">
                         <div class="avatar-add">
-                            <p>建议尺寸168*168，支持jpg、png、gif，最大不能超过50KB</p>
-                            <button type="button" class="layui-btn upload-img">
+                            <p>建议尺寸168*168，支持jpg、png、gif，最大不能超过1M</p>
+                            <button type="button" id="uploadImg" class="layui-btn ">
                                 <i class="layui-icon">&#xe67c;</i>上传头像
                             </button>
-                            <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
+                            <img id="showAvatar"
+                                 src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
                             <span class="loading"></span>
                         </div>
                     </div>
-                </div>
 
+                </div>
                 <div class="layui-form layui-form-pane layui-tab-item">
-                    <form action="/user/repass" method="post">
+                    <form action="/userAccount/change/web/password" method="post">
                         <div class="layui-form-item">
                             <label for="L_nowpass" class="layui-form-label">当前密码</label>
                             <div class="layui-input-inline">
-                                <input type="password" id="L_nowpass" name="nowpass" required
-                                       lay-verify="required" autocomplete="off" class="layui-input">
+                                <input type="password" id="L_nowpass" name="oldPass" required
+                                       lay-verify="required" autocomplete="off"
+                                       class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
                             <label for="L_pass" class="layui-form-label">新密码</label>
                             <div class="layui-input-inline">
-                                <input type="password" id="L_pass" name="pass" required
-                                       lay-verify="required" autocomplete="off" class="layui-input">
+                                <input type="password" id="L_pass" name="newPass" required
+                                       lay-verify="password|required" autocomplete="off"
+                                       class="layui-input">
                             </div>
                             <div class="layui-form-mid layui-word-aux">6到16个字符</div>
                         </div>
@@ -212,43 +227,21 @@
                             <label for="L_repass" class="layui-form-label">确认密码</label>
                             <div class="layui-input-inline">
                                 <input type="password" id="L_repass" name="repass" required
-                                       lay-verify="required" autocomplete="off" class="layui-input">
+                                       lay-verify="repassword|required" autocomplete="off"
+                                       class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
-                            <button class="layui-btn" key="set-mine" lay-filter="*" lay-submit>
+                            <button class="layui-btn" key="set-mine" lay-filter="changePass" lay-submit>
                                 确认修改
                             </button>
                         </div>
                     </form>
                 </div>
 
-                <!--<div class="layui-form layui-form-pane layui-tab-item">-->
-                    <!--<ul class="app-bind">-->
-                        <!--<li class="fly-msg app-havebind">-->
-                            <!--<i class="iconfont icon-qq"></i>-->
-                            <!--<span>已成功绑定，您可以使用QQ帐号直接登录Fly社区，当然，您也可以</span>-->
-                            <!--<a href="javascript:;" class="acc-unbind" type="qq_id">解除绑定</a>-->
-
-                            <!--&lt;!&ndash; <a href="" onclick="layer.msg('正在绑定微博QQ', {icon:16, shade: 0.1, time:0})" class="acc-bind" type="qq_id">立即绑定</a>-->
-                            <!--<span>，即可使用QQ帐号登录Fly社区</span> &ndash;&gt;-->
-                        <!--</li>-->
-                        <!--<li class="fly-msg">-->
-                            <!--<i class="iconfont icon-weibo"></i>-->
-                            <!--&lt;!&ndash; <span>已成功绑定，您可以使用微博直接登录Fly社区，当然，您也可以</span>-->
-                            <!--<a href="javascript:;" class="acc-unbind" type="weibo_id">解除绑定</a> &ndash;&gt;-->
-
-                            <!--<a href="" class="acc-weibo" type="weibo_id"-->
-                               <!--onclick="layer.msg('正在绑定微博', {icon:16, shade: 0.1, time:0})">立即绑定</a>-->
-                            <!--<span>，即可使用微博帐号登录Fly社区</span>-->
-                        <!--</li>-->
-                    <!--</ul>-->
-                <!--</div>-->
             </div>
-
         </div>
     </div>
-</div>
 </div>
 
 <div class="fly-footer">
@@ -256,8 +249,9 @@
             href="#" target="_blank">dada.com 出品</a></p>
 </div>
 
-<script src="../../res/layui/layui.all.js"></script>
+<script src="../../layui/layui.all.js"></script>
 <script>
+
     // console.log(layui.baseUrl())
     // console.log(layui.imgUrl())
     layui.cache.page = 'user';
@@ -268,24 +262,91 @@
         , experience: 83
         , sex: '男'
     };
+
     layui.cache.token = JSON.parse(localStorage.getItem('token'));
     layui.config({
-        version: "2.0.0"
+        version: "2.4.5"
         , base: '../../res/mods/'
     }).extend({
         fly: 'index'
-    }).use('fly', function () {
+    }).use(['fly'], function () {
         let $ = layui.jquery;
         let fly = layui.fly;
+        let form = layui.form;
+        let laydate = layui.laydate;
+        let upload = layui.upload;
+
+        form.verify({
+            password: [
+                /^[\S]{6,12}$/
+                , '密码必须6到12位，且不能出现空格'
+            ],
+            repassword: function (value) {
+                let repassValue = $('#L_pass').val();
+                if (value != repassValue) {
+                    return '两次输入的密码不一致!'
+                }
+            }
+        });
+
         // 设置头像
         $('cite.layui-hide-xs').text(layui.cache.token.username);
         // 设置nickname
         $('.fly-nav-avatar img').attr('src', layui.imgUrl() + layui.cache.token.avatar);
+        // 设置上传头像
+        $('.avatar-add img').attr('src', layui.imgUrl() + layui.cache.token.avatar);
+
+
 
         // 获取个人信息
-        fly.json('/myPage/user/userInformation',null,function (res) {
-                console.log(res)
-        },{type:'get'})
+        fly.json('/myPage/user/userInformation', null, function (res) {
+            // 设置参数
+            let userInfo = res.body.data;
+            $('#L_userInfoId').val(userInfo.id);
+            $('#L_phone').val(userInfo.telephone);
+            $('#L_username').val(layui.cache.token.username);
+            $('[name=sex]').each(function (i, item) {
+                if ($(item).val() === userInfo.sex) {
+                    $(item).prop('checked', true);
+                    form.render();
+                }
+            });
+            $('#L_name').val(userInfo.name);
+            laydate.render({
+                elem: '#L_birthday',
+                value: new Date(userInfo.birthday)
+            });
+            $('#L_school').val(userInfo.school);
+            $('#L_school_number').val(userInfo.schoolNumber);
+            // $('[name=sex]:checked').val();
+        }, {type: 'get'});
+
+
+
+        // 上传头像
+        let uploadInst = upload.render({
+            elem: '#uploadImg'
+            , url: layui.baseUrl() + '/myPage/upload/avatar'
+            , field: 'files'
+            , headers: {authorization: localStorage.getItem('token')}
+            , before: function (obj) {
+                //预读本地文件示例，不支持ie8
+                obj.preview(function (index, file, result) {
+                    $('#showAvatar').attr('src', result); //图片链接（base64）
+                });
+            }
+            , done: function (res) {
+                layer.msg("上传成功!", {icon: 1});
+                localStorage.setItem('token', JSON.stringify(res.body.data));
+                location.reload();
+            }
+            , error: function () {
+                //演示失败状态，并实现重传
+                layer.msg("上传失败!", {icon: 2});
+            }
+        });
+
+
 
     });
 </script>
